Fix styles national.

--- a/www/app/national/templates/idea.html
+++ b/www/app/national/templates/idea.html
@@ -14,4 +14,12 @@
 	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬ</p>
 	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬ</p>
 	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬ</p>
+	<p class="orn-font idea-orn">БЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬБЕЛАРУСЬ</p>
 </div>
