--- a/www/app/national/templates/lacinka.html
+++ b/www/app/national/templates/lacinka.html
@@ -1,9 +1,8 @@
 <div class="lacinka-title versa-font">
-	<p>Belaruskaya</p>
-	<p>Lacinka</p>
+	<p>Belaruskaya Lacinka</p>
 </div>
 
-<div class="versa-font lacinka">
+<div class="antiqua-font lacinka">
 	<span>Aa</span>
 	<span>Bb</span>
 	<span>Cc</span>
