--- a/www/app/national/templates/u.html
+++ b/www/app/national/templates/u.html
@@ -1,7 +1,8 @@
+<div>
+	<span class="u-left antiqua-font">Ў</span>
+	<span class="u-right antiqua-font">Ў</span>
+</div>
+
 <div class="quote-wrapper">
 	<p class="u-text">22-я літара беларускага кірылічнага алфавіта, якая адстунічае ў іншых кірылічных алфавітах славянскіх моў.</p>
-</div>
-<div>
-	<span class="u-left slab-font">Ў</span>
-	<span class="u-right slab-font">Ў</span>
 </div>
