--- a/www/app/national/templates/udzelniki.html
+++ b/www/app/national/templates/udzelniki.html
@@ -1,4 +1,4 @@
-<div class="slab-font">
+<div class="slab-font repression-wrapper">
 	<div class="udzelniki-title">
 		<p>Удзельнiкi</p>
 	</div>
@@ -15,6 +15,23 @@
 		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
 		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
 		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+	</div>
+
+	<div class="row repression-row">
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
 	</div>
 
 	<div class="row repression-row">
@@ -30,10 +47,12 @@
 		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
 		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
 		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
 	</div>
 
 	<div class="row repression-row">
 		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element">i</span></div>
 		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
 		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
 		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
@@ -60,20 +79,6 @@
 		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
 		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
 		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
-	</div>
-
-	<div class="row repression-row">
-		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
-		<div class="col"><span class="repression-element">i</span></div>
-		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
-		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
-		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
-		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
-		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
-		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
-		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
-		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
-		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
 		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
 	</div>
 
@@ -90,6 +95,7 @@
 		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
 		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
 		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
 	</div>
 
 	<div class="row repression-row">
@@ -105,10 +111,72 @@
 		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
 		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
 		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
 	</div>
 	<div class="row repression-row">
 		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
 		<div class="col"><span class="repression-element">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+	</div>
+	<div class="row repression-row">
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+	</div>
+	<div class="row repression-row">
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+	</div>
+	<div class="row repression-row">
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+	</div>
+	<div class="row repression-row">
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
+		<div class="col"><span class="repression-element">i</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
 		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
 		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
 		<div class="col"><span class="repression-element" ng-click="openPopover($event)">i</span></div>
@@ -124,7 +192,7 @@
 
 <script id="my-popover.html" type="text/ng-template">
 	<ion-popover-view>
-		<ion-header-bar class="repression-title helvetica-font">
+		<ion-header-bar class="repression-title antiqua-font">
 			<span>{{repression.name}}</span>
 		</ion-header-bar>
 		<ion-content class="repression-content">
