--- a/www/app/national/templates/tarashkevich.html
+++ b/www/app/national/templates/tarashkevich.html
@@ -1,40 +1,58 @@
 <div class="slab-font">
+	<p class="bssr-text">ПЛЯН ФIЛЯЗОФIЯ СЫМБАЛЬ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text">СЫМБАЛЬ ПЛЯН АЛЬФАБЭТ СЁНЬНЯ ФIЛЯЗОФIЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text">ФIЛЯЗОФIЯ ПЛЯН СЫМБАЛЬ АЛЬФАБЭТ МАРФАЛЁГIЯ СЁНЬНЯ АРТАГРАФIЯ</p>
+	<p class="bssr-text">СЫМБАЛЬ МАРФАЛЁГIЯ ФIЛЯЗОФIЯ ПЛЯН АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ</p>
+	<p class="bssr-text">ФIЛЯЗОФIЯ СЫМБАЛЬ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ ПЛЯН МАРФАЛЁГIЯ</p>
+	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ МАРФАЛЁГIЯ АРТАГРАФIЯ</p>
+	<p class="bssr-text">СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ ПЛЯН АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text">ФIЛЯЗОФIЯ ПЛЯН СЫМБАЛЬ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text">АРТАГРАФIЯ ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text">ПЛЯН СЫМБАЛЬ АЛЬФАБЭТ МАРФАЛЁГIЯ ФIЛЯЗОФIЯ СЁНЬНЯ АРТАГРАФIЯ</p>
+	<p class="bssr-text">ПЛЯН ФIЛЯЗОФIЯ СЫМБАЛЬ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text">СЫМБАЛЬ ПЛЯН АЛЬФАБЭТ СЁНЬНЯ ФIЛЯЗОФIЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text">ФIЛЯЗОФIЯ ПЛЯН СЫМБАЛЬ АЛЬФАБЭТ МАРФАЛЁГIЯ СЁНЬНЯ АРТАГРАФIЯ</p>
+	<p class="bssr-text">СЫМБАЛЬ МАРФАЛЁГIЯ ФIЛЯЗОФIЯ ПЛЯН АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ</p>
+	<p class="bssr-text">ФIЛЯЗОФIЯ СЫМБАЛЬ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ ПЛЯН МАРФАЛЁГIЯ</p>
+	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ МАРФАЛЁГIЯ АРТАГРАФIЯ</p>
+	<p class="bssr-text">СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ ПЛЯН АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text">ФIЛЯЗОФIЯ ПЛЯН СЫМБАЛЬ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text">АРТАГРАФIЯ ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text">ПЛЯН СЫМБАЛЬ АЛЬФАБЭТ МАРФАЛЁГIЯ ФIЛЯЗОФIЯ СЁНЬНЯ АРТАГРАФIЯ</p>
+	<p class="bssr-text">СЫМБАЛЬ ПЛЯН АЛЬФАБЭТ СЁНЬНЯ ФIЛЯЗОФIЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text">ФIЛЯЗОФIЯ ПЛЯН СЫМБАЛЬ АЛЬФАБЭТ МАРФАЛЁГIЯ СЁНЬНЯ АРТАГРАФIЯ</p>
+	<p class="bssr-text">СЫМБАЛЬ МАРФАЛЁГIЯ ФIЛЯЗОФIЯ ПЛЯН АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ</p>
+	<p class="bssr-text">ФIЛЯЗОФIЯ СЫМБАЛЬ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ ПЛЯН МАРФАЛЁГIЯ</p>
+	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ МАРФАЛЁГIЯ АРТАГРАФIЯ</p>
+	<p class="bssr-text">СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ ПЛЯН АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text">ФIЛЯЗОФIЯ ПЛЯН СЫМБАЛЬ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text">ФIЛЯЗОФIЯ ПЛЯН СЫМБАЛЬ АЛЬФАБЭТ МАРФАЛЁГIЯ СЁНЬНЯ АРТАГРАФIЯ</p>
+	<p class="bssr-text">СЫМБАЛЬ МАРФАЛЁГIЯ ФIЛЯЗОФIЯ ПЛЯН АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ</p>
+	<p class="bssr-text">ФIЛЯЗОФIЯ СЫМБАЛЬ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ ПЛЯН МАРФАЛЁГIЯ</p>
+	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ МАРФАЛЁГIЯ АРТАГРАФIЯ</p>
+	<p class="bssr-text">СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ ПЛЯН АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text">ФIЛЯЗОФIЯ ПЛЯН СЫМБАЛЬ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text">АРТАГРАФIЯ ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text">ПЛЯН СЫМБАЛЬ АЛЬФАБЭТ МАРФАЛЁГIЯ ФIЛЯЗОФIЯ СЁНЬНЯ АРТАГРАФIЯ</p>
+	<p class="bssr-text">СЫМБАЛЬ ПЛЯН АЛЬФАБЭТ СЁНЬНЯ ФIЛЯЗОФIЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
 	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
 	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text">ФIЛЯЗОФIЯ ПЛЯН СЫМБАЛЬ АЛЬФАБЭТ МАРФАЛЁГIЯ СЁНЬНЯ АРТАГРАФIЯ</p>
+	<p class="bssr-text">СЫМБАЛЬ МАРФАЛЁГIЯ ФIЛЯЗОФIЯ ПЛЯН АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ</p>
+	<p class="bssr-text">ФIЛЯЗОФIЯ СЫМБАЛЬ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ ПЛЯН МАРФАЛЁГIЯ</p>
+	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ МАРФАЛЁГIЯ АРТАГРАФIЯ</p>
+	<p class="bssr-text">СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ ПЛЯН АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text">ФIЛЯЗОФIЯ ПЛЯН СЫМБАЛЬ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
 	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text">АРТАГРАФIЯ ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text">ПЛЯН СЫМБАЛЬ АЛЬФАБЭТ МАРФАЛЁГIЯ ФIЛЯЗОФIЯ СЁНЬНЯ АРТАГРАФIЯ</p>
+	<p class="bssr-text">СЫМБАЛЬ ПЛЯН АЛЬФАБЭТ СЁНЬНЯ ФIЛЯЗОФIЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
 	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-</div>
-
-<div class="taras-letter versa-font">
-	<span>Ь</span>
-</div>
-<div class="taras-grammar">
-	<p class="text-center">ГРАМАТЫКА ТАРАШКЕВIЧА</p>
-</div>
-
-<div class="taras-back">
-
 </div>
