--- a/www/css/national.css
+++ b/www/css/national.css
@@ -62,15 +62,15 @@
 	color: #B72624;
 	position: absolute;
 	font-size: 6em;
-	left: 21%;
+	left: 28%;
 	transform: rotate(5deg);
-	bottom: 118px;
+	bottom: 110px;
 }
 
 .idea-orn {
 	color: #B72624;
-	font-size: 35px;
-	line-height: 42px;
+	font-size: 3em;
+	line-height: 1em;
 	white-space: pre;
 	margin: 0;
 }
@@ -78,6 +78,8 @@
 .bssr-text {
 	white-space: pre;
 	margin: 0;
+	font-size: 2em;
+	padding: 5px;
 }
 
 .sun-postcard {
@@ -114,17 +116,17 @@
 }
 
 .u-left {
-	font-size: 400px;
+	font-size: 32em;
 	position: absolute;
-	bottom: 40%;
-	left: -37%;
+	bottom: 55%;
+	left: -14%;
 }
 
 .u-right {
-	font-size: 400px;
+	font-size: 32em;
 	position: absolute;
-	bottom: 40%;
-	right: -37%;
+	bottom: 55%;
+	right: -18%;
 }
 
 .u-text {
@@ -147,10 +149,9 @@
 
 .lacinka span {
 	display: inline-block;
-	padding: 12px;
-	margin: 5px;
-	font-size: 38px;
-	border: 1px solid black;
+	padding: 5px;
+	margin: 26px;
+	font-size: 5em;
 }
 
 .lacinka-title {
@@ -165,35 +166,21 @@
 }
 
 .taras-letter {
-	font-size: 220px;
+	font-size: 25em;
 	font-weight: bold;
 	position: absolute;
-	text-align: left;
 	top: 42%;
-	right: 33%;
-	z-index: 2;
+	right: 36%;
 }
 
 .taras-grammar {
-	font-size: 35px;
-	line-height: 35px;
+	font-size: 3em;
+	margin-top: 25px;
 	font-weight: bold;
 	position: absolute;
-	text-align: left;
 	top: 57%;
-	left: -2%;
+	left: 14%;
 	z-index: 2;
-}
-
-.taras-back {
-	height: 262px;
-	width: 252px;
-	position: absolute;
-	background: linear-gradient(141deg, #E7DACD 0%, #DBCEC1 51%, #D0C3B6 75%);
-	top: 31%;
-	left: 18%;
-	z-index: 1;
-	box-shadow: 7px 2px 13px #8C8C8C;
 }
 
 .popover {
