Fix styles national.

--- a/www/app/national/templates/tarashkevich.html
+++ b/www/app/national/templates/tarashkevich.html
@@ -1,58 +1,58 @@
 <div class="slab-font">
-	<p class="bssr-text">ПЛЯН ФIЛЯЗОФIЯ СЫМБАЛЬ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">СЫМБАЛЬ ПЛЯН АЛЬФАБЭТ СЁНЬНЯ ФIЛЯЗОФIЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ФIЛЯЗОФIЯ ПЛЯН СЫМБАЛЬ АЛЬФАБЭТ МАРФАЛЁГIЯ СЁНЬНЯ АРТАГРАФIЯ</p>
-	<p class="bssr-text">СЫМБАЛЬ МАРФАЛЁГIЯ ФIЛЯЗОФIЯ ПЛЯН АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ</p>
-	<p class="bssr-text">ФIЛЯЗОФIЯ СЫМБАЛЬ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ ПЛЯН МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ МАРФАЛЁГIЯ АРТАГРАФIЯ</p>
-	<p class="bssr-text">СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ ПЛЯН АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ФIЛЯЗОФIЯ ПЛЯН СЫМБАЛЬ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">АРТАГРАФIЯ ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ПЛЯН СЫМБАЛЬ АЛЬФАБЭТ МАРФАЛЁГIЯ ФIЛЯЗОФIЯ СЁНЬНЯ АРТАГРАФIЯ</p>
-	<p class="bssr-text">ПЛЯН ФIЛЯЗОФIЯ СЫМБАЛЬ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">СЫМБАЛЬ ПЛЯН АЛЬФАБЭТ СЁНЬНЯ ФIЛЯЗОФIЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ФIЛЯЗОФIЯ ПЛЯН СЫМБАЛЬ АЛЬФАБЭТ МАРФАЛЁГIЯ СЁНЬНЯ АРТАГРАФIЯ</p>
-	<p class="bssr-text">СЫМБАЛЬ МАРФАЛЁГIЯ ФIЛЯЗОФIЯ ПЛЯН АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ</p>
-	<p class="bssr-text">ФIЛЯЗОФIЯ СЫМБАЛЬ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ ПЛЯН МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ МАРФАЛЁГIЯ АРТАГРАФIЯ</p>
-	<p class="bssr-text">СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ ПЛЯН АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ФIЛЯЗОФIЯ ПЛЯН СЫМБАЛЬ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">АРТАГРАФIЯ ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ПЛЯН СЫМБАЛЬ АЛЬФАБЭТ МАРФАЛЁГIЯ ФIЛЯЗОФIЯ СЁНЬНЯ АРТАГРАФIЯ</p>
-	<p class="bssr-text">СЫМБАЛЬ ПЛЯН АЛЬФАБЭТ СЁНЬНЯ ФIЛЯЗОФIЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ФIЛЯЗОФIЯ ПЛЯН СЫМБАЛЬ АЛЬФАБЭТ МАРФАЛЁГIЯ СЁНЬНЯ АРТАГРАФIЯ</p>
-	<p class="bssr-text">СЫМБАЛЬ МАРФАЛЁГIЯ ФIЛЯЗОФIЯ ПЛЯН АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ</p>
-	<p class="bssr-text">ФIЛЯЗОФIЯ СЫМБАЛЬ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ ПЛЯН МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ МАРФАЛЁГIЯ АРТАГРАФIЯ</p>
-	<p class="bssr-text">СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ ПЛЯН АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ФIЛЯЗОФIЯ ПЛЯН СЫМБАЛЬ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ФIЛЯЗОФIЯ ПЛЯН СЫМБАЛЬ АЛЬФАБЭТ МАРФАЛЁГIЯ СЁНЬНЯ АРТАГРАФIЯ</p>
-	<p class="bssr-text">СЫМБАЛЬ МАРФАЛЁГIЯ ФIЛЯЗОФIЯ ПЛЯН АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ</p>
-	<p class="bssr-text">ФIЛЯЗОФIЯ СЫМБАЛЬ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ ПЛЯН МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ МАРФАЛЁГIЯ АРТАГРАФIЯ</p>
-	<p class="bssr-text">СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ ПЛЯН АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ФIЛЯЗОФIЯ ПЛЯН СЫМБАЛЬ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">АРТАГРАФIЯ ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ПЛЯН СЫМБАЛЬ АЛЬФАБЭТ МАРФАЛЁГIЯ ФIЛЯЗОФIЯ СЁНЬНЯ АРТАГРАФIЯ</p>
-	<p class="bssr-text">СЫМБАЛЬ ПЛЯН АЛЬФАБЭТ СЁНЬНЯ ФIЛЯЗОФIЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ФIЛЯЗОФIЯ ПЛЯН СЫМБАЛЬ АЛЬФАБЭТ МАРФАЛЁГIЯ СЁНЬНЯ АРТАГРАФIЯ</p>
-	<p class="bssr-text">СЫМБАЛЬ МАРФАЛЁГIЯ ФIЛЯЗОФIЯ ПЛЯН АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ</p>
-	<p class="bssr-text">ФIЛЯЗОФIЯ СЫМБАЛЬ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ ПЛЯН МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ МАРФАЛЁГIЯ АРТАГРАФIЯ</p>
-	<p class="bssr-text">СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ ПЛЯН АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ФIЛЯЗОФIЯ ПЛЯН СЫМБАЛЬ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">АРТАГРАФIЯ ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ПЛЯН СЫМБАЛЬ АЛЬФАБЭТ МАРФАЛЁГIЯ ФIЛЯЗОФIЯ СЁНЬНЯ АРТАГРАФIЯ</p>
-	<p class="bssr-text">СЫМБАЛЬ ПЛЯН АЛЬФАБЭТ СЁНЬНЯ ФIЛЯЗОФIЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
-	<p class="bssr-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text taras-text">ПЛЯН ФIЛЯЗОФIЯ СЫМБАЛЬ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text taras-text">СЫМБАЛЬ ПЛЯН АЛЬФАБЭТ СЁНЬНЯ ФIЛЯЗОФIЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text taras-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text taras-text">ФIЛЯЗОФIЯ ПЛЯН СЫМБАЛЬ АЛЬФАБЭТ МАРФАЛЁГIЯ СЁНЬНЯ АРТАГРАФIЯ</p>
+	<p class="bssr-text taras-text">СЫМБАЛЬ МАРФАЛЁГIЯ ФIЛЯЗОФIЯ ПЛЯН АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ</p>
+	<p class="bssr-text taras-text">ФIЛЯЗОФIЯ СЫМБАЛЬ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ ПЛЯН МАРФАЛЁГIЯ</p>
+	<p class="bssr-text taras-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ МАРФАЛЁГIЯ АРТАГРАФIЯ</p>
+	<p class="bssr-text taras-text">СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ ПЛЯН АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text taras-text">ФIЛЯЗОФIЯ ПЛЯН СЫМБАЛЬ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text taras-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text taras-text">АРТАГРАФIЯ ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text taras-text">ПЛЯН СЫМБАЛЬ АЛЬФАБЭТ МАРФАЛЁГIЯ ФIЛЯЗОФIЯ СЁНЬНЯ АРТАГРАФIЯ</p>
+	<p class="bssr-text taras-text">ПЛЯН ФIЛЯЗОФIЯ СЫМБАЛЬ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text taras-text">СЫМБАЛЬ ПЛЯН АЛЬФАБЭТ СЁНЬНЯ ФIЛЯЗОФIЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text taras-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text taras-text">ФIЛЯЗОФIЯ ПЛЯН СЫМБАЛЬ АЛЬФАБЭТ МАРФАЛЁГIЯ СЁНЬНЯ АРТАГРАФIЯ</p>
+	<p class="bssr-text taras-text">СЫМБАЛЬ МАРФАЛЁГIЯ ФIЛЯЗОФIЯ ПЛЯН АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ</p>
+	<p class="bssr-text taras-text">ФIЛЯЗОФIЯ СЫМБАЛЬ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ ПЛЯН МАРФАЛЁГIЯ</p>
+	<p class="bssr-text taras-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ МАРФАЛЁГIЯ АРТАГРАФIЯ</p>
+	<p class="bssr-text taras-text">СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ ПЛЯН АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text taras-text">ФIЛЯЗОФIЯ ПЛЯН СЫМБАЛЬ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text taras-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text taras-text">АРТАГРАФIЯ ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text taras-text">ПЛЯН СЫМБАЛЬ АЛЬФАБЭТ МАРФАЛЁГIЯ ФIЛЯЗОФIЯ СЁНЬНЯ АРТАГРАФIЯ</p>
+	<p class="bssr-text taras-text">СЫМБАЛЬ ПЛЯН АЛЬФАБЭТ СЁНЬНЯ ФIЛЯЗОФIЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text taras-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text taras-text">ФIЛЯЗОФIЯ ПЛЯН СЫМБАЛЬ АЛЬФАБЭТ МАРФАЛЁГIЯ СЁНЬНЯ АРТАГРАФIЯ</p>
+	<p class="bssr-text taras-text">СЫМБАЛЬ МАРФАЛЁГIЯ ФIЛЯЗОФIЯ ПЛЯН АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ</p>
+	<p class="bssr-text taras-text">ФIЛЯЗОФIЯ СЫМБАЛЬ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ ПЛЯН МАРФАЛЁГIЯ</p>
+	<p class="bssr-text taras-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ МАРФАЛЁГIЯ АРТАГРАФIЯ</p>
+	<p class="bssr-text taras-text">СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ ПЛЯН АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text taras-text">ФIЛЯЗОФIЯ ПЛЯН СЫМБАЛЬ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text taras-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text taras-text">ФIЛЯЗОФIЯ ПЛЯН СЫМБАЛЬ АЛЬФАБЭТ МАРФАЛЁГIЯ СЁНЬНЯ АРТАГРАФIЯ</p>
+	<p class="bssr-text taras-text">СЫМБАЛЬ МАРФАЛЁГIЯ ФIЛЯЗОФIЯ ПЛЯН АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ</p>
+	<p class="bssr-text taras-text">ФIЛЯЗОФIЯ СЫМБАЛЬ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ ПЛЯН МАРФАЛЁГIЯ</p>
+	<p class="bssr-text taras-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ МАРФАЛЁГIЯ АРТАГРАФIЯ</p>
+	<p class="bssr-text taras-text">СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ ПЛЯН АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text taras-text">ФIЛЯЗОФIЯ ПЛЯН СЫМБАЛЬ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text taras-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text taras-text">АРТАГРАФIЯ ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text taras-text">ПЛЯН СЫМБАЛЬ АЛЬФАБЭТ МАРФАЛЁГIЯ ФIЛЯЗОФIЯ СЁНЬНЯ АРТАГРАФIЯ</p>
+	<p class="bssr-text taras-text">СЫМБАЛЬ ПЛЯН АЛЬФАБЭТ СЁНЬНЯ ФIЛЯЗОФIЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text taras-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text taras-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text taras-text">ФIЛЯЗОФIЯ ПЛЯН СЫМБАЛЬ АЛЬФАБЭТ МАРФАЛЁГIЯ СЁНЬНЯ АРТАГРАФIЯ</p>
+	<p class="bssr-text taras-text">СЫМБАЛЬ МАРФАЛЁГIЯ ФIЛЯЗОФIЯ ПЛЯН АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ</p>
+	<p class="bssr-text taras-text">ФIЛЯЗОФIЯ СЫМБАЛЬ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ ПЛЯН МАРФАЛЁГIЯ</p>
+	<p class="bssr-text taras-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ МАРФАЛЁГIЯ АРТАГРАФIЯ</p>
+	<p class="bssr-text taras-text">СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ ПЛЯН АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text taras-text">ФIЛЯЗОФIЯ ПЛЯН СЫМБАЛЬ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text taras-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text taras-text">АРТАГРАФIЯ ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text taras-text">ПЛЯН СЫМБАЛЬ АЛЬФАБЭТ МАРФАЛЁГIЯ ФIЛЯЗОФIЯ СЁНЬНЯ АРТАГРАФIЯ</p>
+	<p class="bssr-text taras-text">СЫМБАЛЬ ПЛЯН АЛЬФАБЭТ СЁНЬНЯ ФIЛЯЗОФIЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
+	<p class="bssr-text taras-text">ПЛЯН СЫМБАЛЬ ФIЛЯЗОФIЯ АЛЬФАБЭТ СЁНЬНЯ АРТАГРАФIЯ МАРФАЛЁГIЯ</p>
 </div>
