--- a/www/app/national/templates/u.html
+++ b/www/app/national/templates/u.html
@@ -3,6 +3,7 @@
 	<span class="u-right antiqua-font">Ў</span>
 </div>
 
-<div class="quote-wrapper">
-	<p class="u-text">22-я літара беларускага кірылічнага алфавіта, якая адстунічае ў іншых кірылічных алфавітах славянскіх моў.</p>
+<div>
+	<p class="quote-text-repression helvetica-font">22-я літара беларускага кірылічнага алфавіта, якая адстунічае ў
+		іншых кірылічных алфавітах славянскіх моў.</p>
 </div>
