Fix styles modern.

--- a/www/app/modern/templates/last.html
+++ b/www/app/modern/templates/last.html
@@ -1,6 +1,6 @@
+<div class="quote-wrapper">
+	<p class="quote-title helvetica-font text-center text-white">Беларуская Трагедыя</p>
+</div>
 <div class="sun-postcard text-center">
 	<img src="css/img/modern/last.jpg"/>
-</div>
-<div class="quote-wrapper">
-	<p class="quote-text helvetica-font text-center text-white">Беларуская Трагедыя</p>
 </div>
