--- a/www/app/modern/templates/mova.html
+++ b/www/app/modern/templates/mova.html
@@ -3,6 +3,7 @@
 	<img src="css/img/modern/mova.jpg"/>
 </div>
 <div>
-	<p class="mova-text helvetica-font text-center text-white">По данным перепеси населения, назвали родным языком своей
+	<p class="quote-text-repression bottom-quote helvetica-font text-center text-white">По данным перепеси населения,
+		назвали родным языком своей
 		национальности 60% жителей страны, однако разговаривают обычно на нём дома - только 30%</p>
 </div>
