--- a/www/app/soviet/templates/kaizer.html
+++ b/www/app/soviet/templates/kaizer.html
@@ -1,16 +1,16 @@
-<div>
-	<p class="german-font kaizer-text">Deutsches</p>
+<div class="kaizer-text-wrapper">
+	<p class="germanica-font kaizer-text">Deutsches</p>
 	<p class="gable-font kaizer-bnr-text">BELARUSKAYA NARODNAYA RESPUBLIKA</p>
-	<p class="german-font kaizer-text">Kaiserreich</p>
-	<div class="gramata-text helvetica-font">
-		Рада Беларускае Народнае Рэспублікі, як выбраная прадстаўніца Беларускага Народу, зварачаецца да Вашай
-		Імпэратарскай Вялікасьці з словамі глыбокае падзякі за вызваленьне Беларусі нямецкімі войскамі з цяжкага ўціску,
-		чужога пануючага зьдзеку і анархіі.
+	<p class="germanica-font kaizer-text">Kaiserreich</p>
+</div>
+<div class="gramata-text helvetica-font">
+	Рада Беларускае Народнае Рэспублікі, як выбраная прадстаўніца Беларускага Народу, зварачаецца да Вашай
+	Імпэратарскай Вялікасьці з словамі глыбокае падзякі за вызваленьне Беларусі нямецкімі войскамі з цяжкага ўціску,
+	чужога пануючага зьдзеку і анархіі.
 
-		Рада Беларускае Народнае Рэспублікі дэкляравала незалежнасьць цэлае і непадзельнае Беларусі і просіць Вашую
-		Імпэратарскую Вялікасьць аб абароне у яе кіраваньнях дзеля ўмацаваньня дзяржаўнае незалежнасьці і
-		непадзельнасьці краю у сувязі з Германскай Імпэрыяй.
+	Рада Беларускае Народнае Рэспублікі дэкляравала незалежнасьць цэлае і непадзельнае Беларусі і просіць Вашую
+	Імпэратарскую Вялікасьць аб абароне у яе кіраваньнях дзеля ўмацаваньня дзяржаўнае незалежнасьці і
+	непадзельнасьці краю у сувязі з Германскай Імпэрыяй.
 
-		Толькі пад абаронай Германскай Імпэрыі бачыць край сваю добрую долю у будучыні
-	</div>
+	Толькі пад абаронай Германскай Імпэрыі бачыць край сваю добрую долю у будучыні
 </div>
