--- a/www/app/soviet/templates/reforma.html
+++ b/www/app/soviet/templates/reforma.html
@@ -1,14 +1,15 @@
-<div class="helvetica-font reforma-text">
-	Более 20 новых правил, введенных реформой 1933 года, искажали установившиеся нормы белорусского литературного языка путём искусственного наложения на них правил русского языка.
-</div>
 <div class="helvetica-font narkom-text">
-	<p>Арфаграфія</p>
-	<p>Філасофія</p>
-	<p>Лексікалогія</p>
-	<p>Сімвал</p>
-	<p>Марфалогія</p>
-	<p>Сёння</p>
-	<p>Змест</p>
-	<p>План</p>
-	<p>Логіка</p>
+	<p><span class="line-through">Артаграфія</span> Арфаграфія</p>
+	<p><span class="line-through">Філязофія</span> Філасофія</p>
+	<p><span class="line-through">Лексікалёгія</span> Лексікалогія</p>
+	<p><span class="line-through">Сымбаль</span> Сімвал</p>
+	<p><span class="line-through">Марфалёгія</span> Марфалогія</p>
+	<p><span class="line-through">Сёньня</span> Сёння</p>
+	<p><span class="line-through">Зьмест</span> Змест</p>
+	<p><span class="line-through">Плян</span> План</p>
+	<p><span class="line-through">Лёгіка</span> Логіка</p>
+</div>
+<div class="helvetica-font quote-text-repression">
+	Более 20 новых правил, введенных реформой 1933 года, искажали установившиеся нормы белорусского литературного языка
+	путём искусственного наложения на них правил русского языка.
 </div>
