--- a/www/app/soviet/templates/repressions.html
+++ b/www/app/soviet/templates/repressions.html
@@ -117,4 +117,60 @@
 		<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
 		<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
 	</div>
+	<div class="row repression-row">
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+		<div class="col"><span class="repression-element">O</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+	</div>
+	<div class="row repression-row">
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+		<div class="col"><span class="repression-element">O</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+	</div>
+	<div class="row repression-row">
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+		<div class="col"><span class="repression-element">O</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+	</div>
+	<div class="row repression-row">
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+		<div class="col"><span class="repression-element">O</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+		<div class="col"><span class="repression-element" ng-click="openPopover($event)">X</span></div>
+	</div>
 </div>
