Fix styles modern.

--- a/www/app/modern/templates/sluck.html
+++ b/www/app/modern/templates/sluck.html
@@ -1,6 +1,6 @@
 <div class="modern-bnr impact-font">
 	Б<span class="ion-help"></span>Р
 </div>
-<div class="modern-sluck">
-
-</div>
+<div class="modern-sluck"></div>
+<div class="modern-sluck2"></div>
+<div class="modern-sluck3"></div>
