--- a/www/css/modern.css
+++ b/www/css/modern.css
@@ -36,8 +36,24 @@
 
 .modern-sluck {
 	background: url("img/repression/sluck.jpg") no-repeat;
-	width: 343px;
-	height: 257px;
+	width: 604px;
+	height: 454px;
+	margin: auto;
+}
+
+.modern-sluck2 {
+	display: inline-block;
+	background: url("img/repression/sluck2.jpg") no-repeat;
+	width: 300px;
+	height: 222px;
+	margin: 5px 5px 0 73px;
+}
+
+.modern-sluck3 {
+	display: inline-block;
+	background: url("img/repression/sluck3.jpg") no-repeat;
+	width: 300px;
+	height: 222px;
 	margin: auto;
 }
 
